# SAMCell

./: MANIFEST.in  README.md  final_test.csv  final_test.xlsx  pyproject.toml  requirements.txt  setup.py  test_excel.xlsx  test_results.csv
src/: __init__.py  model.py  pipeline.py
src/samcell/: __init__.py  cli.py  dataset_livecell.py  metrics.py  model.py  pipeline.py  slidingWindow.py  utils.py
src/samcell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
