[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samcell"
version = "1.0.0"
description = "Generalized label-free biological cell segmentation with Segment Anything"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Alexandra Dunnum VandeLoo", email = "adunnum1@gatech.edu"},
    {name = "Nathan J. Malta"},
    {name = "Saahil Sanganeriya", email = "saahilsanganeriya@gatech.edu"},
    {name = "Emilio Aponte"},
    {name = "Caitlin van Zyl"},
    {name = "Danfei Xu"},
    {name = "Craig Forest"},
]
maintainers = [
    {name = "Saahil Sanganeriya", email = "saahilsanganeriya@gatech.edu"},
]
keywords = [
    "cell segmentation",
    "microscopy",
    "computer vision",
    "deep learning",
    "segment anything",
    "biology",
    "image analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "transformers>=4.26.0",
    "numpy>=1.21.0",
    "opencv-python-headless>=4.5.0",
    "scikit-image>=0.19.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "tqdm>=4.60.0",
    "Pillow>=8.0.0",
    "safetensors>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "jupyter>=1.0.0",
]
gui = [
    "PyQt6>=6.0",
]
napari = [
    "napari>=0.4.14",
    "magicgui>=0.5.0",
]
all = [
    "samcell[dev,gui,napari]",
]

[project.urls]
Homepage = "https://github.com/saahilsanganeriya/SAMCell"
Documentation = "https://github.com/saahilsanganeriya/SAMCell/blob/main/README.md"
Repository = "https://github.com/saahilsanganeriya/SAMCell"
"Bug Tracker" = "https://github.com/saahilsanganeriya/SAMCell/issues"
Paper = "https://www.biorxiv.org/content/10.1101/2025.02.06.636835v1"

[project.scripts]
samcell = "samcell.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
